# rgeometry

./: .dockerignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COVERAGE_ANALYSIS.md  Cargo.toml  Dockerfile.server  README.md  RELEASE_CHECKLIST.md  convex_hull.html  crates.js  delaunay.html  doc-header.html  earclip.html  flake.nix  help.html  kernel.html  melkman.html  pyproject.toml  random_convex.html  random_monotone.html  result  rgeometry.checksum  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js  two_opt.html  visibility.html
.github/: codecov.yml  dependabot.yml
array_init/: all.html  fn.array_init.html  fn.from_iter.html  fn.from_iter_reversed.html  fn.map_array_init.html  fn.try_array_init.html  index.html  sidebar-items.js
benches/: convex_polygon.rs  graham_scan.rs  two_opt.rs
claim/: all.html  index.html  macro.assert_err.html  macro.assert_ge.html  macro.assert_gt.html  macro.assert_le.html  macro.assert_lt.html  macro.assert_matches.html  macro.assert_none!.html  macro.assert_none.html  macro.assert_ok.html  macro.assert_ok_eq!.html  macro.assert_ok_eq.html  macro.assert_pending!.html  macro.assert_pending.html  macro.assert_ready!.html  macro.assert_ready.html  macro.assert_ready_eq!.html  macro.assert_ready_eq.html  macro.assert_ready_err.html  macro.assert_ready_ok!.html  macro.assert_ready_ok.html  macro.assert_some!.html  macro.assert_some.html  macro.assert_some_eq!.html  macro.assert_some_eq.html  macro.debug_assert_err!.html  macro.debug_assert_err.html  macro.debug_assert_ge.html  macro.debug_assert_gt.html  macro.debug_assert_le.html  macro.debug_assert_lt.html  macro.debug_assert_matches.html  macro.debug_assert_none!.html  macro.debug_assert_none.html  macro.debug_assert_ok!.html  macro.debug_assert_ok.html  macro.debug_assert_ok_eq!.html  macro.debug_assert_ok_eq.html  macro.debug_assert_pending!.html  (+14 more)
claims/: all.html  index.html  macro.assert_err.html  macro.assert_err_eq!.html  macro.assert_err_eq.html  macro.assert_ge.html  macro.assert_gt.html  macro.assert_le.html  macro.assert_lt.html  macro.assert_matches.html  macro.assert_none!.html  macro.assert_none.html  macro.assert_ok.html  macro.assert_ok_eq!.html  macro.assert_ok_eq.html  macro.assert_pending.html  macro.assert_ready.html  macro.assert_ready_eq.html  macro.assert_ready_err!.html  macro.assert_ready_err.html  macro.assert_ready_ok.html  macro.assert_some!.html  macro.assert_some.html  macro.assert_some_eq.html  macro.debug_assert_err.html  macro.debug_assert_err_eq!.html  macro.debug_assert_err_eq.html  macro.debug_assert_ge.html  macro.debug_assert_gt.html  macro.debug_assert_le.html  macro.debug_assert_lt.html  macro.debug_assert_matches.html  macro.debug_assert_none.html  macro.debug_assert_ok!.html  macro.debug_assert_ok.html  macro.debug_assert_ok_eq!.html  macro.debug_assert_ok_eq.html  macro.debug_assert_pending.html  macro.debug_assert_ready.html  macro.debug_assert_ready_eq!.html  (+11 more)
demos/convex_hull/: Cargo.toml
demos/convex_hull/src/: lib.rs
demos/earclip/: Cargo.toml  config.yaml  output.html
demos/earclip/src/: lib.rs
demos/kernel/: Cargo.toml
demos/kernel/src/: lib.rs
demos/melkman/: Cargo.toml
demos/melkman/src/: lib.rs
demos/random_monotone/: Cargo.toml
demos/random_monotone/src/: lib.rs
demos/two_opt/: Cargo.toml
demos/two_opt/src/: lib.rs
demos/visibility/: Cargo.toml
demos/visibility/src/: lib.rs
examples/: convexhull.rs  delaunay.rs  num.rs  planar_graph.rs  random.rs  turn.rs  two_opt.rs
geometry_predicates/: all.html  index.html  sidebar-items.js
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  (+6488 more)
libm/: all.html  fn.acos.html  fn.acosf.html  fn.acosh.html  fn.acoshf.html  fn.asin.html  fn.asinf.html  fn.asinh.html  fn.asinhf.html  fn.atan.html  fn.atan2.html  fn.atan2f.html  fn.atanf.html  fn.atanh.html  fn.atanhf.html  fn.cbrt.html  fn.cbrtf.html  fn.ceil.html  fn.ceilf.html  fn.copysign.html  fn.copysignf.html  fn.cos.html  fn.cosf.html  fn.cosh.html  fn.coshf.html  fn.erf.html  fn.erfc.html  fn.erfcf.html  fn.erff.html  fn.exp.html  fn.exp10.html  fn.exp10f.html  fn.exp2.html  fn.exp2f.html  fn.expf.html  fn.expm1.html  fn.expm1f.html  fn.fabs.html  fn.fabsf.html  fn.fdim.html  (+77 more)
nix/: extract-uncovered-snippets.py
notes/: an_optimal_algorithm_for_finding_the_kernel_of_a_polygon.md
num/: all.html  fn.abs.html  fn.abs_sub.html  fn.cast.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.pow.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Signed.html  (+8 more)
playground/server/: Cargo.toml  build.rs
playground/server/src/: compile.rs  main.rs  manager.rs
rgeometry-wasm/: Cargo.toml  README.md  two-opt-example.txt
rgeometry-wasm/src/: lib.rs
(+3958 files in other folders)
