[package]
authors = ["David Himmelstrup <lemmih@gmail.com>"]
categories = ["algorithms", "data-structures", "mathematics", "graphics"]
description = "High-Level Computational Geometry"
edition = "2018"
exclude = [
  ".dockerignore",
  ".github",
  ".gitignore",
  "playground",
  "Dockerfile.server",
]
homepage = "https://rgeometry.org/"
license = "Unlicense"
name = "rgeometry"
readme = "README.md"
repository = "https://github.com/rgeometry/rgeometry"
version = "0.9.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry-predicates = "0.3.0"
array-init          = "2.1"
claims              = "0.7"
getrandom           = { version = "^0.2.3", features = ["js"] }
num                 = "0.4.3"
num-bigint          = "0.4.6"
num-rational        = "0.4.2"
num-traits          = "0.2.*"
ordered-float       = "4.4.0"
rand                = { version = "0.8", features = ["small_rng"] }
rug                 = { version = "1.12", optional = true }

[dev-dependencies]
criterion     = "0.5.1"
proptest      = "1.5.0"
test-strategy = "0.4.0"
# Used for doctest examples.
# rgeometry-wasm = { git = "https://github.com/rgeometry/rgeometry-wasm", branch = "main" }

[[bench]]
harness = false
name    = "convex_polygon"

[[bench]]
harness = false
name    = "graham_scan"

[[bench]]
harness = false
name    = "two_opt"

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
debug = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[patch."https://github.com/rgeometry/rgeometry"]
rgeometry = { path = "." }
