[package]
authors = ["David Himmelstrup <lemmih@gmail.com>"]
categories = ["algorithms", "data-structures", "mathematics", "graphics"]
description = "High-Level Computational Geometry"
edition = "2021"
resolver = "2"
exclude = [".dockerignore", ".github", ".gitignore", "playground", "Dockerfile.server"]
homepage = "https://rgeometry.org/"
license = "Unlicense"
name = "rgeometry"
readme = "README.md"
repository = "https://github.com/rgeometry/rgeometry"
version = "0.10.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1"
claims = "0.8"
geometry-predicates = "0.3.0"
num = "0.4.3"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.*"
ordered-float = "4.6.0"
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
rug = { version = "1.12", optional = true }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"
test-strategy = "0.4.0"
# Used for doctest examples.
# rgeometry-wasm = { git = "https://github.com/rgeometry/rgeometry-wasm", branch = "main" }

[[bench]]
harness = false
name = "convex_polygon"

[[bench]]
harness = false
name = "graham_scan"

[[bench]]
harness = false
name = "two_opt"

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
debug = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[patch."https://github.com/rgeometry/rgeometry"]
rgeometry = { path = "." }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
