[package]
name = "rgeometry-wasm"
version = "0.1.0"
authors = ["David Himmelstrup <lemmih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.2", features = ["js"] }
gloo-events = "0.2.0"
gloo-render = "0.2.0"
js-sys = "0.3.51"
num = "0.4.0"
once_cell = "1.8.0"
ordered-float = { version = "5.0.0", features = ["rand"] }
rand = "0.8"
rgeometry = { path = ".." }
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'TextMetrics',
  'console',
  'Document',
  'DomMatrix',
  'DomPointInit',
  'DomPoint',
  'Path2d',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Touch',
  'TouchEvent',
  'TouchList',
  'Window',
  'CssStyleDeclaration',
]
version = "0.3.77"
