[package]
name = "earclip"
version = "0.1.0"
edition = "2021"
authors = ["David Himmelstrup <lemmih@gmail.com>"]
license = "Unlicense"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rgeometry-wasm = { path = "../../rgeometry-wasm" }
wasm-bindgen = "=0.2.100"

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Path2d',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'InputEvent',
  'TouchEvent',
  'Window',
]
version = "0.3.77"
