[package]
name = "random_monotone"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-events = "0.2.0"
num-rational = "0.4.2"
once_cell = "1.21.3"
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
rgeometry = { path = "../../" }
rgeometry-wasm = { path = "../../rgeometry-wasm" }
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Path2d',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'InputEvent',
  'TouchEvent',
  'Window',
]
version = "0.3.77"
