[package]
name    = "server"
version = "0.1.0"
authors = ["David Himmelstrup <lemmih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64            = "0.13"
lazy_static       = "*"
futures-channel   = "*"
futures-util      = "*"
tokio             = { version = "*", features = ["macros", "rt", "process", "sync"] }
tungstenite       = "*"
tokio-tungstenite = "*"
directories       = "*"
git-version       = "*"

[dev-dependencies]
quickcheck        = "1"
quickcheck_macros = "1"
