[package]
name = "server"
version = "0.1.0"
authors = ["David Himmelstrup <lemmih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
directories = "*"
futures-channel = "*"
futures-util = "*"
git-version = "*"
lazy_static = "*"
once_cell = "*"
reqwest = "*"
rocket = "0.5.0-rc.1"
tokio = { version = "*", features = ["macros", "rt", "process", "sync"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
